# japanese-sentiment-analyzer

./: .gitignore  DEVELOPMENT_LOG.md  LICENSE  README.md  frontend_deployment_report.md  git_push_report.md  improvement_task_list.md  phase1_completion_report.md  phase2_completion_report.md  phase3_binary_completion_report.md  phase5_completion_report.md  phase6_completion_report.md  phase7_completion_report.md  phase7_notification.py  send_slack_notification.py  specification.md  task_list.md
backend/: .env  Dockerfile  debug_model_loading.py  fly.dev.toml  fly.prod.toml  fly.staging.toml  fly.toml  phase1_completion_report.md  pyproject.toml  test_health_endpoint.py  test_memory_and_prediction.py  test_model_loading.py  test_new_model.py  test_numpy_weights.py
backend/app/: main.py  model_loader.py
backend/app/models/: batch_request.py
backend/app/services/: batch_service.py  feature_service.py
backend/data/: data_exploration.json  data_summary.json  test.csv  train.csv  val.csv
backend/models/: japanese_sentiment_model_lite_classifier.pkl  japanese_sentiment_model_lite_metadata.json  japanese_sentiment_model_lite_vectorizer.pkl  japanese_sentiment_model_ultra_classifier.pkl  japanese_sentiment_model_ultra_metadata.json  japanese_sentiment_model_ultra_vectorizer.pkl  lightweight_model_report.json  model_metadata.json  ultra_lightweight_model_report.json  weights.npz  weights_old_biased.npz
backend/scripts/: comprehensive_model_testing.py  data_preparation.py  ensemble_training.py  model_training.py  notification_system.py  retrain_3class_model.py  retrain_binary_improved_model.py  test_plan.md  train_lightweight_model.py  train_ultra_lightweight_model.py
backend/tests/: test_browser_compatibility.py  test_ensemble.py  test_error_handling.py  test_integration.py  test_main.py  test_model_accuracy.py  test_notification.py  test_performance.py  test_security.py  test_services.py
(+42 files in other folders)
